--- a/Amazon_Reviews_ETL.ipynb
+++ b/Amazon_Reviews_ETL.ipynb
@@ -470,7 +470,7 @@
         "mode = \"append\"\n",
         "jdbc_url=\"jdbc:postgresql://dataviz.cpqf0vw3nkb6.us-east-2.rds.amazonaws.com:5432/postgres\"\n",
         "config = {\"user\":\"postgres\", \n",
-        "          \"password\": \"2020Kaye\", \n",
+        "          \"password\": \"*****\", \n",
         "          \"driver\":\"org.postgresql.Driver\"}"
       ],
       "execution_count": 20,
