--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Vine_Review_Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOYFZWEJfKWUfxzuXRP1nSD",
+      "authorship_tag": "ABX9TyMIwSd0uCw1biFioR+y2gJe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4mRvXI6PKEaZ",
-        "outputId": "c49654eb-2c57-4973-e076-dac81bb3d802"
+        "outputId": "80fd69a3-659d-475b-ff60-117a1de07e4d"
       },
       "source": [
         "import os\n",
@@ -61,27 +61,41 @@
         "import findspark\n",
         "findspark.init()"
       ],
-      "execution_count": 23,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://security.ubuntu.com/ubuntu bionic-security InRelease\n",
-            "Ign:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Ign:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Get:6 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
-            "Hit:7 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
-            "Hit:8 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Hit:12 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
-            "Get:13 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Hit:15 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Get:16 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [1,786 kB]\n",
-            "Get:17 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [914 kB]\n",
-            "Fetched 2,880 kB in 4s (774 kB/s)\n",
+            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [Waiting for headers] [1 \r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [Waiting for headers] [Co\r                                                                               \rIgn:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [Waiting for headers] [Co\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\r                                                                               \rIgn:3 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\r                                                                               \rGet:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release [697 B]\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (91.189.88.142)\r                                                                               \rGet:5 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [5 InRelease 14.2 kB/88.7 k\r                                                                               \rHit:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release.gpg [836 B]\n",
+            "Get:8 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
+            "Hit:9 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:10 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ Packages [66.2 kB]\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Hit:13 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "Ign:14 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages\n",
+            "Get:14 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages [695 kB]\n",
+            "Get:15 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Get:16 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease [15.9 kB]\n",
+            "Get:17 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
+            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [510 kB]\n",
+            "Get:19 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2,263 kB]\n",
+            "Get:20 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,421 kB]\n",
+            "Get:21 http://security.ubuntu.com/ubuntu bionic-security/multiverse amd64 Packages [26.7 kB]\n",
+            "Get:22 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [1,790 kB]\n",
+            "Get:23 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [2,699 kB]\n",
+            "Get:24 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [916 kB]\n",
+            "Get:25 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,196 kB]\n",
+            "Get:26 http://archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 Packages [39.4 kB]\n",
+            "Get:27 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [544 kB]\n",
+            "Get:28 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic/main amd64 Packages [40.9 kB]\n",
+            "Get:29 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic/main amd64 Packages [44.1 kB]\n",
+            "Fetched 13.6 MB in 5s (2,553 kB/s)\n",
             "Reading package lists... Done\n"
           ],
           "name": "stdout"
@@ -95,27 +109,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3vFKIlGHgOwU",
-        "outputId": "65cc9d18-5d94-469f-e352-bc901d8df84d"
+        "outputId": "bf7259e8-9393-44a0-f73d-13de99aa6f0e"
       },
       "source": [
         "# Download the Postgres driver that will allow Spark to interact with Postgres.\n",
         "!wget https://jdbc.postgresql.org/download/postgresql-42.2.16.jar"
       ],
-      "execution_count": 24,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-08-13 22:16:55--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
+            "--2021-08-15 23:24:32--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1002883 (979K) [application/java-archive]\n",
-            "Saving to: ‘postgresql-42.2.16.jar.2’\n",
+            "Saving to: ‘postgresql-42.2.16.jar’\n",
             "\n",
-            "postgresql-42.2.16. 100%[===================>] 979.38K  --.-KB/s    in 0.08s   \n",
+            "postgresql-42.2.16. 100%[===================>] 979.38K  4.72MB/s    in 0.2s    \n",
             "\n",
-            "2021-08-13 22:16:55 (11.5 MB/s) - ‘postgresql-42.2.16.jar.2’ saved [1002883/1002883]\n",
+            "2021-08-15 23:24:33 (4.72 MB/s) - ‘postgresql-42.2.16.jar’ saved [1002883/1002883]\n",
             "\n"
           ],
           "name": "stdout"
@@ -131,7 +145,7 @@
         "from pyspark.sql import SparkSession\n",
         "spark = SparkSession.builder.appName(\"BC-Challenge\").config(\"spark.driver.extraClassPath\",\"/content/postgresql-42.2.16.jar\").getOrCreate()"
       ],
-      "execution_count": 25,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -141,7 +155,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GwsE2mZ5gb6I",
-        "outputId": "25c54674-06e6-4743-a71c-372d50e1011d"
+        "outputId": "08dc28f8-03e3-4cd2-8e9f-8a463a8eeb26"
       },
       "source": [
         "from pyspark import SparkFiles\n",
@@ -150,7 +164,7 @@
         "df = spark.read.option(\"encoding\", \"UTF-8\").csv(SparkFiles.get(\"\"), sep=\"\\t\", header=True, inferSchema=True)\n",
         "df.show()"
       ],
-      "execution_count": 26,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,14 +207,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2wRYIb2Bgb9J",
-        "outputId": "376cc122-61ab-4ae2-c4c0-998a31890b76"
+        "outputId": "7a518f33-0534-4edc-c201-4d79c5e03492"
       },
       "source": [
         "# Create the vine_table DataFrame\n",
         "vine_df = df.select([\"review_id\", \"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\n",
         "vine_df.show()"
       ],
-      "execution_count": 27,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,14 +257,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m8GVUr4TgcBs",
-        "outputId": "10d7a9bd-e025-40e4-8d1e-af05ce40b45b"
+        "outputId": "0bf83261-7fc1-4e89-92b0-fc87c50b453e"
       },
       "source": [
         "from pyspark.sql.types import IntegerType\n",
         "vine_df = vine_df.withColumn(\"star_rating\",vine_df.star_rating.cast(IntegerType()))\n",
         "vine_df.dtypes"
       ],
-      "execution_count": 28,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +281,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 6
         }
       ]
     },
@@ -278,13 +292,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJ1Z9EHHhBX_",
-        "outputId": "635f684c-f4d8-4b87-d327-c2aa7d7bc987"
+        "outputId": "67acccaa-022d-4265-ec5c-6d7b68926fef"
       },
       "source": [
         "good_votes_df = vine_df.filter(\"total_votes>=20\")\n",
         "good_votes_df.show()"
       ],
-      "execution_count": 29,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,13 +341,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BJPYRw0xhFsF",
-        "outputId": "bafe30e6-6439-4758-d5ce-f62affa2c40a"
+        "outputId": "5010e7b6-8447-4b5e-e44e-2fbad0bcd860"
       },
       "source": [
         "good_reviews_df = good_votes_df.filter((good_votes_df.helpful_votes/good_votes_df.total_votes) >= 0.5)\n",
         "good_reviews_df.show(10)"
       ],
-      "execution_count": 31,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,13 +380,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v1k5quM7hJ7F",
-        "outputId": "4554231a-9e7b-4e88-b510-f5a62077b06a"
+        "outputId": "950667a6-d7cf-47d0-cba4-3e167083058d"
       },
       "source": [
         "purchased_reviews_df = good_reviews_df.filter(\"vine == 'Y'\")\n",
         "purchased_reviews_df.show(10)"
       ],
-      "execution_count": 32,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,13 +419,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YNKN0p34hJ-a",
-        "outputId": "5e0ddad0-9fc9-4242-c194-4f5e1bed0af4"
+        "outputId": "1a6a0492-d43c-4e7f-e339-17328e22acff"
       },
       "source": [
         "unpaid_reviews_df = good_reviews_df.filter(\"vine == 'N'\")\n",
         "unpaid_reviews_df.show(10)"
       ],
-      "execution_count": 33,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,12 +458,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gwoKCW3JhR9J",
-        "outputId": "549fc711-0bd5-4cd2-d5a6-bad758e47be9"
+        "outputId": "299689b3-fbe8-40f6-9183-abe70bc26b21"
       },
       "source": [
         "good_reviews_df.count()"
       ],
-      "execution_count": 34,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +475,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 22
         }
       ]
     },
@@ -472,13 +486,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SzFMteRVhSAZ",
-        "outputId": "4569d142-d99b-4095-9880-0454f6449ad0"
+        "outputId": "3ba4f22f-cb77-4466-e297-7b5cdec9bb52"
       },
       "source": [
         "purchased_reviews_count = purchased_reviews_df.count()\n",
         "purchased_reviews_count"
       ],
-      "execution_count": 35,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +504,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 23
         }
       ]
     },
@@ -501,13 +515,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x9BMBr7FhSEO",
-        "outputId": "49f803cf-4625-465f-91c4-7474bf145ddf"
+        "outputId": "357339f3-038d-4c2a-e6ac-0675adc6b99b"
       },
       "source": [
         "unpaid_reviews_count = unpaid_reviews_df.count()\n",
         "unpaid_reviews_count"
       ],
-      "execution_count": 36,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +533,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 26
         }
       ]
     },
@@ -530,13 +544,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2y-Jbruzhbca",
-        "outputId": "3f472044-bfd3-41b4-e313-fda158b58420"
+        "outputId": "9ea5662a-57d6-422f-fb71-03435fd13bea"
       },
       "source": [
-        "purchased_top_reviews = purchased_reviews_df.filter(purchased_reviews_df.star_rating==5).count()\n",
+        "purchased_fivestar_reviews = purchased_reviews_df.filter(purchased_reviews_df.star_rating==5).count()\n",
         "purchased_top_reviews"
       ],
-      "execution_count": 37,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +562,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 27
         }
       ]
     },
@@ -559,13 +573,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GaTOrCM9hbfW",
-        "outputId": "cb2b865f-b06a-4f6c-ba0b-80310911e512"
+        "outputId": "b090a3c7-6307-43ed-e357-1b58c50f46b7"
       },
       "source": [
-        "unpaid_top_reviews = unpaid_reviews_df.filter(unpaid_reviews_df.star_rating==5).count()\n",
-        "unpaid_top_reviews"
+        "unpaid_fivestar_reviews = unpaid_reviews_df.filter(unpaid_reviews_df.star_rating==5).count()\n",
+        "unpaid_fivestar_reviews"
       ],
-      "execution_count": 38,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +591,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 28
         }
       ]
     },
@@ -588,13 +602,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pAFgakoFhcW-",
-        "outputId": "a0d5233f-ea48-4131-cf63-96f4d86a3482"
+        "outputId": "ac490bb7-2d71-4fdc-d439-e8160be6759b"
       },
       "source": [
-        "purchased_top_percentage = (purchased_top_reviews/purchased_reviews_count) * 100\n",
-        "purchased_top_percentage"
+        "purchased_fivestar_percentage = (purchased_fivestar_reviews/purchased_reviews_count) * 100\n",
+        "purchased_fivestar_percentage"
       ],
-      "execution_count": 39,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,7 +620,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 29
         }
       ]
     },
@@ -617,13 +631,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3EXIztlMhcZf",
-        "outputId": "24d10ab3-6487-49c8-ea86-cedba3cfe6c9"
+        "outputId": "8cd318cf-d2f5-487e-d9db-bf3b69c5c98b"
       },
       "source": [
-        "unpaid_five_star_percentage = (unpaid_five_star_reviews/unpaid_reviews_count) * 100\n",
-        "unpaid_five_star_percentage"
+        "unpaid_fivestar_percentage = (unpaid_fivestar_reviews/unpaid_reviews_count) * 100\n",
+        "unpaid_fivestar_percentage"
       ],
-      "execution_count": 40,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +649,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 30
         }
       ]
     }
